# stm32-433mhz

./: Cargo.toml
.cargo/: config.toml
pcb/stm32/: components_spi.kicad_sch  fp-info-cache  power_supply.kicad_sch  sensors_i2c.kicad_sch  sensors_onewire.kicad_sch  stm32.kicad_pcb  stm32.kicad_prl  stm32.kicad_pro  stm32.kicad_sch  stm32_core.kicad_sch  sym-lib-table  usb.kicad_sch  wireless.kicad_sch
pcb/stm32/KiCAD/2023-02-12_17-09-08/: 2023-02-12_17-09-08.kicad_sym
pcb/stm32/KiCAD/2023-02-12_17-09-08/footprints.pretty/: LQFP-32-L.kicad_mod  LQFP-32-M.kicad_mod  LQFP-32.kicad_mod
pcb/stm32/KiCAD/2023-02-13_13-40-03/: 2023-02-13_13-40-03.kicad_sym
pcb/stm32/KiCAD/2023-02-13_13-40-03/footprints.pretty/: LQFP-32-L.kicad_mod  LQFP-32.kicad_mod
src/: main.rs  payload.rs  transport.rs
src/hardware/: mod.rs
src/hardware/chips/: stm32l053r8.rs
src/hardware/machine/: mod.rs  nucleo_stm32l053r8.rs
stm32-cubemx/: battery-sequence.pcs  stm32-cubemx.ioc
tmp/: lib.rs  packets.rs
tmp/codec/: identity.rs  ldpc.rs  mod.rs  reed_solomon.rs  sixbits.rs
workspaces/bit_io/: Cargo.toml
workspaces/bit_io/src/: error.rs  lib.rs  reader.rs  writer.rs
workspaces/bit_io/src/sync/: mod.rs  sync_reader.rs  sync_writer.rs
workspaces/codec/: Cargo.toml
workspaces/codec/src/: chain.rs  four_to_six.rs  lib.rs  lzss.rs  reed_solomon.rs  two_to_three.rs
workspaces/external_memory/: Cargo.toml
workspaces/external_memory/src/: allocator.rs  box_type.rs  lib.rs  memory.rs  vec_type.rs
workspaces/external_memory/src/box_type/: box_ref.rs
workspaces/external_memory/src/memory/: mod.rs
workspaces/external_memory/src/vec_type/: iterator.rs
workspaces/manchester/: Cargo.toml
workspaces/manchester/src/: lib.rs
workspaces/network/: Cargo.toml  defmt-print-runner.sh
workspaces/network/src/: error.rs  lib.rs  packet.rs  packet_builder.rs  sequence_number.rs  tests.rs
workspaces/network/src/packet_builder/: packet32_builder.rs  packet64_builder.rs
workspaces/network/src/simple/: codec.rs  mod.rs  receiver.rs  sender.rs
workspaces/network/src/tests/: io.rs  network.rs
workspaces/network/src/transport/: mod.rs  reader.rs  window.rs  writer.rs
workspaces/physical_layer/: Cargo.toml
workspaces/physical_layer/src/: error.rs  lib.rs  manchester.rs  pwm.rs  reader.rs  utils.rs  writer.rs
workspaces/physical_layer/src/manchester/: codec.rs  reader.rs  writer.rs
workspaces/physical_layer/src/pwm/: reader.rs  writer.rs
workspaces/physical_layer/src/pwm/sync/: mod.rs  sync_reader.rs  sync_writer.rs
workspaces/physical_layer/src/sync/: mod.rs  reader.rs  sync_reader.rs  writer.rs
workspaces/sequence_number/: Cargo.toml
workspaces/sequence_number/src/: lib.rs
