[package]
name = "stm32_433mhz_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["workspaces/codec", "workspaces/bit_io", "workspaces/network", "workspaces/sequence_number"]


[features]
default = ["nucleo_stm32l053r8"]
nucleo_stm32l053r8 = []


[dependencies]
# Our own dependency
codec = { path = "workspaces/codec" }
bit_io = { path = "workspaces/bit_io" }
network = { path = "workspaces/network" }

# Embasy HAL Runtime
embassy-executor = { git = "https://github.com/embassy-rs/embassy",  version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy",  version = "0.1.0", features = ["defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy",  version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy",  version = "0.1.0", features = ["nightly", "defmt", "memory-x", "stm32l053r8", "time-driver-any", "exti"] }

# HW and HAL
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# HW logging
defmt = "0.3"
defmt-rtt = "0.4"

# Sensorts and outside HW libraries
onewire = "~0.3.13"
#bme280 = "~0.4.4" # Issue with embedded-hal version
#bme280-multibus = { version = "~0.2.2", features = ["async"] } # Async is not a feature?
#bme280-rs = { version = "0.1.0", features = ["async"] } # Async?

# Async and libraries
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
#heapless = { version = "0.7.5", default-features = false }
static_cell = "~1.0.0"
serde = { version = "~1.0.152", default-features = false, features = ["derive"] }


[profile.dev.package."*"]
opt-level = "s"
[profile.release.package."*"]
opt-level = "s"

[profile.dev.package.cortex-m-rt]
opt-level = 0
[profile.dev.package.bit_io]
opt-level = 3
[profile.release.package.bit_io]
opt-level = 3
[profile.dev.package.sequence_number]
opt-level = 3
[profile.release.package.sequence_number]
opt-level = 3
[profile.dev.package.network]
opt-level = 3
[profile.release.package.network]
opt-level = 3


[profile.dev]
panic = "abort"
codegen-units = 4
incremental = true
lto = true
opt-level = "s"
debug = 2 # To get more debug info


[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
