[package]
name = "codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reed-solomon = "~0.2.1"
lzss = { version = "~0.9.0", default-features = false }

#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"
