[package]
name = "codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Codecs
reed-solomon = "~0.2.1"
lzss = { version = "~0.9.0", default-features = false }

# Helper libraries
heapless = { version = "~0.7.16", default-features = false }
