[package]
name = "manchester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#embassy-time = { git = "https://github.com/embassy-rs/embassy",  version = "^0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy",  version = "^0.1.0" }
defmt = "~0.3.2"
