[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
packet-32 = []
packet-64 = []


[dependencies]
codec = { path = "../codec" }
physical_layer = { path = "../physical_layer", default-features = false }
sequence_number = { path = "../sequence_number" }

bitfield-struct = "^0.3.2"
postcard = { version = "^1.0.4", default-features = false, features = ["use-defmt"] }
serde = { version = "^1.0.152", default-features = false }

heapless = "0.7.16"
defmt = "~0.3.2"


[dev-dependencies]
# A hacky way of getting logs from defmt in tests to stdout on terminal
# Taken from here: https://github.com/gauteh/defmt-serial/blob/main/example-std/
# TODO not working
#defmt-serial = "~0.6.0"
#embedded-hal = "~0.2.7"
#nb = "~1.1.0"
#critical-section = { version = "1.1", features = ["std"]}
# Hotfixed with log crate
log = "0.4.19"
env_logger = "0.10.0"
async-std = "1.12.0"
async-std-test = "0.0.4"

manchester = { path = "../manchester" }
