[package]
name = "physical_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["embassy"]
embassy = ["dep:embassy-time", "dep:embassy-stm32"]

[dependencies]
embassy-time = { git = "https://github.com/embassy-rs/embassy",  version = "^0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"], optional = true }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy",  version = "^0.1.0", features = ["defmt", "exti"], optional = true }

manchester = { path = "../manchester" }

futures = { version = "~0.3.26", default-features = false, features = ["async-await"] }

defmt = "~0.3.2"
static_cell = "^1.0.0"
